docs(synchronized): 补充 synchronized 的代码文档